--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -153,6 +153,27 @@ table tr:hover {
     border-bottom: 1px solid;
 }
 
+.botonModal {
+    position: relative;
+    padding: 5px 10px;
+    margin: 0px 10px 10px 0px;
+    border-radius: 10px;
+    font-size: 15px;
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    background-color: #bae1ff;
+    border-color: black;
+    border-bottom: 5px solid black;
+    float: center;
+}
+
+.botonModal:active {
+    transform: translate(0px, 5px);
+    -webkit-transform: translate(0px, 5px);
+    border-bottom: 1px solid;
+}
+
 .botonCre {
     padding: 5px 10px;
     margin: 0px 10px 10px 0px;
@@ -275,4 +296,58 @@ table tr:hover {
     background-color: rgba(101, 115, 126);
     outline: none;
     color: #fff;
+}
+
+
+/* The Modal (background) */
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+
+/* Modal Content */
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+
+/* The Close Button */
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
